--- a/Servidor/App.xaml
+++ b/Servidor/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Servidor"
-             StartupUri="MainWindow.xaml">
+             StartupUri="/Views/ResultadosView.xaml">
     <Application.Resources>
          
     </Application.Resources>
